Developer/src/objects/UserInformation__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>住所</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(OR(MONTH(today())-MONTH(BirthDay__c)&gt;0,AND(MONTH(TODAY()) - MONTH(BirthDay__c)&gt;=0,DAY(TODAY()) - DAY(BirthDay__c)&gt;=0)),
YEAR(TODAY()) - YEAR(BirthDay__c),
YEAR(TODAY()) - YEAR(BirthDay__c)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>年齢</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BirthDay__c</fullName>
        <label>生年月日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>対象キャンペーン</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipLabel>ユーザー情報</relationshipLabel>
        <relationshipName>Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CheckStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>選択ステータス</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChildCount__c</fullName>
        <label>子供の人数</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>自己紹介</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DistrictName__c</fullName>
        <formula>District__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>全国地方公共団体コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>所属地域</label>
        <referenceTo>DistrictMaster__c</referenceTo>
        <relationshipLabel>ユーザー情報</relationshipLabel>
        <relationshipName>District</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FamilyCount__c</fullName>
        <label>世帯人数</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FamilyList__c</fullName>
        <label>同居家族</label>
        <picklist>
            <picklistValues>
                <fullName>子供(男)　0歳～3歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(男)　4歳～10歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(男)　11歳～20歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(男)　21歳～30歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(男)　31歳～</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(女)　0歳～3歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(女)　4歳～10歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(女)　11歳～20歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(女)　21歳～30歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>子供(女)　31歳～</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>兄　0歳～3歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>兄　4歳～10歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>兄　11歳～20歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>兄　21歳～30歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>兄　31歳～</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>弟　0歳～3歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>弟　4歳～10歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>弟　11歳～20歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>弟　21歳～30歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>弟　31歳～</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>姉　0歳～3歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>姉　4歳～10歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>姉　11歳～20歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>姉　21歳～30歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>姉　31歳～</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>妹　0歳～3歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>妹　4歳～10歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>妹　11歳～20歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>妹　21歳～30歳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>妹　31歳～</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FriendCounts__c</fullName>
        <label>友達数</label>
        <summaryForeignKey>Friend__c.User__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FriendStatus__c</fullName>
        <label>友達ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>友達申請中です</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>既にお友達です</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ImageUrl__c</fullName>
        <formula>IF ( PictureID__c=NULL , NULL , IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp;  PictureID__c, &quot;顔写真&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>写真</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobStatus__c</fullName>
        <label>職業</label>
        <picklist>
            <picklistValues>
                <fullName>無職</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>無職(定年)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>無職(主婦)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>アルバイト</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>パート</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>自営業</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>会社員</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marriage__c</fullName>
        <label>婚姻状態</label>
        <picklist>
            <picklistValues>
                <fullName>未婚</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>既婚</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PictureID__c</fullName>
        <label>写真ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PictureURL__c</fullName>
        <formula>IF ( PictureID__c=NULL , NULL , &quot;/servlet/servlet.FileDownload?file=&quot; &amp; PictureID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>写真URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoketMoney__c</fullName>
        <label>小遣い</label>
        <picklist>
            <picklistValues>
                <fullName>10万円～</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5万円～10万円未満</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3万円～5万円未満</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0円～3万円未満</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RelatedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>対象ユーザー</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RelatedUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDPY2012Q1__c</fullName>
        <formula>IF(Summary_2012Q1__c == 0, 1, Summary_2013Q1__c /Summary_2012Q1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>昨対比2012Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDPY2012Q2__c</fullName>
        <formula>IF(Summary_2012Q1__c == 0, 1,Summary_2013Q1__c /Summary_2012Q1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>昨対比2012Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDPY2012Q3__c</fullName>
        <formula>IF(Summary_2012Q3__c == 0, 1,Summary_2013Q3__c / Summary_2012Q3__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>昨対比2012Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>性別</label>
        <picklist>
            <picklistValues>
                <fullName>男性</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>女性</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary_2012Q1__c</fullName>
        <label>合計販売金額_2012Q1</label>
        <summarizedField>PurchaseTransaction__c.PurchaseAmount__c</summarizedField>
        <summaryFilterItems>
            <field>PurchaseTransaction__c.PuchaseDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2012</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PurchaseTransaction__c.PuchaseDate__c</field>
            <operation>lessThan</operation>
            <value>4/1/2012</value>
        </summaryFilterItems>
        <summaryForeignKey>PurchaseTransaction__c.PuchasedBy__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_2012Q2__c</fullName>
        <label>合計販売金額_2012Q2</label>
        <summarizedField>PurchaseTransaction__c.PurchaseAmount__c</summarizedField>
        <summaryFilterItems>
            <field>PurchaseTransaction__c.PuchaseDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2012</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PurchaseTransaction__c.PuchaseDate__c</field>
            <operation>lessThan</operation>
            <value>7/1/2012</value>
        </summaryFilterItems>
        <summaryForeignKey>PurchaseTransaction__c.PuchasedBy__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary_2012Q3__c</fullName>
        <label>合計販売金額_2012Q3</label>
        <summarizedField>PurchaseTransaction__c.PurchaseAmount__c</summarizedField>
        <summaryFilterItems>
            <field>PurchaseTransaction__c.PuchaseDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2012</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PurchaseTransaction__c.PuchaseDate__c</field>
            <operation>lessThan</operation>
            <value>10/1/2012</value>
        </summaryFilterItems>
        <summaryForeignKey>PurchaseTransaction__c.PuchasedBy__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>合計販売金額</label>
        <summarizedField>PurchaseTransaction__c.PurchaseAmount__c</summarizedField>
        <summaryForeignKey>PurchaseTransaction__c.PuchasedBy__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>郵便番号</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>ユーザー情報</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BirthDay__c</columns>
        <columns>Address__c</columns>
        <columns>RelatedUser__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>氏名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>